--- a/sass/style.css
+++ b/sass/style.css
@@ -355,12 +355,12 @@ h4 {
           transform: rotate(0turn) translate(0, 0);
 }
 
-.menu:hover {
+.menu:active {
   -webkit-box-shadow: grey 6px 6px 6px;
           box-shadow: grey 6px 6px 6px;
 }
 
-.menu:hover .valide {
+.menu:active .valide {
   color: white;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -378,7 +378,7 @@ h4 {
   transition: 2000ms 10s translateX(80px, 0);
 }
 
-.menu:hover .valide i {
+.menu:active .valide i {
   font-size: 20px;
   -webkit-transform: rotate(1turn);
           transform: rotate(1turn);
@@ -410,7 +410,7 @@ h4 {
   font-size: 16px;
 }
 
-.bouton a button:hover {
+.bouton a button:active {
   -webkit-box-shadow: #727171 0px 7px 15px;
           box-shadow: #727171 0px 7px 15px;
   -webkit-filter: brightness(1.1);
@@ -522,10 +522,33 @@ h4 {
     font-size: 20px;
     margin-right: 20px;
   }
+  .menu:hover {
+    -webkit-box-shadow: grey 6px 6px 6px;
+            box-shadow: grey 6px 6px 6px;
+  }
   .menu:hover .valide {
+    color: white;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     margin-top: -46px;
+    margin-left: 20px;
     height: 117px;
     padding: 20px;
+    border-radius: 0 20px 20px 0;
+    background-color: #99E2D0;
+    -webkit-transition: 2000ms 10s translateX(80px, 0);
+    transition: 2000ms 10s translateX(80px, 0);
+  }
+  .menu:hover .valide i {
+    font-size: 20px;
+    -webkit-transform: rotate(1turn);
+            transform: rotate(1turn);
+    -webkit-transition: 900ms;
+    transition: 900ms;
   }
   .bouton button {
     width: 400px;
@@ -533,6 +556,12 @@ h4 {
   }
   .bouton a button {
     font-size: 22px;
+  }
+  .bouton a button:hover {
+    -webkit-box-shadow: #727171 0px 7px 15px;
+            box-shadow: #727171 0px 7px 15px;
+    -webkit-filter: brightness(1.1);
+            filter: brightness(1.1);
   }
 }
 
@@ -658,7 +687,7 @@ h1 + p {
   font-size: 16px;
 }
 
-.explorer a button:hover {
+.explorer a button:active {
   -webkit-box-shadow: #727171 0px 7px 15px;
           box-shadow: #727171 0px 7px 15px;
   -webkit-filter: brightness(1.1);
@@ -727,7 +756,7 @@ h2 {
   width: 100%;
 }
 
-.choix:hover button {
+.choix:active button {
   background-color: #dfccf5;
   border-radius: 25px;
   -webkit-filter: brightness(1.02);
@@ -781,7 +810,7 @@ h2 {
   margin-bottom: 10px;
 }
 
-.choix:hover i {
+.choix:active i {
   color: #9356DC;
 }
 
@@ -825,7 +854,7 @@ h2 {
   color: black;
 }
 
-.carte a:hover {
+.carte a:active {
   -webkit-box-shadow: #b8b7b7 0px 5px 10px;
           box-shadow: #b8b7b7 0px 5px 10px;
   border-radius: 20px;
@@ -906,7 +935,7 @@ aside {
   color: transparent;
 }
 
-.coeurrempli:hover i {
+.coeurrempli:active i {
   background: -webkit-gradient(linear, left bottom, left top, from(#FF79DA), to(#9356DC));
   background: linear-gradient(0deg, #FF79DA, #9356DC);
   background-clip: text;
@@ -1057,6 +1086,33 @@ aside {
   aside {
     margin-left: 30.5%;
     width: 10%;
+  }
+  .explorer a button:hover {
+    -webkit-box-shadow: #727171 0px 7px 15px;
+            box-shadow: #727171 0px 7px 15px;
+    -webkit-filter: brightness(1.1);
+            filter: brightness(1.1);
+  }
+  .choix:hover button {
+    background-color: #dfccf5;
+    border-radius: 25px;
+    -webkit-filter: brightness(1.02);
+            filter: brightness(1.02);
+    -webkit-box-shadow: #b8b7b7 0px 5px 10px;
+            box-shadow: #b8b7b7 0px 5px 10px;
+  }
+  .choix:hover i {
+    color: #9356DC;
+  }
+  .carte a:hover {
+    -webkit-box-shadow: #b8b7b7 0px 5px 10px;
+            box-shadow: #b8b7b7 0px 5px 10px;
+    border-radius: 20px;
+  }
+  .coeurrempli:hover i {
+    background: -webkit-gradient(linear, left bottom, left top, from(#FF79DA), to(#9356DC));
+    background: linear-gradient(0deg, #FF79DA, #9356DC);
+    background-clip: text;
   }
 }
 
