--- a/sass/pages/_accueil.scss
+++ b/sass/pages/_accueil.scss
@@ -31,12 +31,12 @@ main
 		background-color: darken($cadre, $amount: 5%);
 		border-top: solid 4px darken($cadre, $amount: 10%);
 	}
-		.icone
+		.rechercher i
 		{
 			display: flex;
 			font-size: 20px;
-			margin-left: 8%;
-			margin-right: 5px;
+			margin-left: 7%;
+			margin-right: 20px;
 		}
 		.ville
 		{
@@ -47,7 +47,8 @@ main
 			width: 80%;
 			color: $texte;
 			font-size: 16px;
-			background-color: $cadre;
+			border: none;
+			background: none;
 		}	
 	.explorer
 	{
@@ -79,16 +80,15 @@ main
 			padding: 10px 20px;
 			border-radius: 40px;
 			background: $degrade;
-			
 			border: none;
 		}
-		.explorer a button
+		.explorer a
 		{
 			text-decoration: none;
 			color: white;
 			font-size: 16px;
 		}
-		.explorer a button:active
+		.explorer button:active
 		{
 			box-shadow: $texte 0px 7px 15px;
 			filter: brightness(1.1);
@@ -100,54 +100,46 @@ main
 		height: 370px;
 		width: 100%;
 		margin-top: 40px;
-		margin-left: -10px;
 		margin-bottom: 10px;
 		justify-content: space-around;
 	}
-	.fonctionnement_button
+	.fonctionnement_bouton
 	{
 		display: flex;
 		flex-direction: column;
 		justify-content: space-between;
 		width: 100%;
-		height: 300px;
+		height: 250px;
 	}
 		h2
 		{
 			@include fontbold;
-			width: 80%;
+			width: 100%;
 			font-size: 25px;
-			margin-left: 30px;
+			margin-left: 25px;
 		}
 		.choix
 		{
 			display: flex;
-			flex-direction: column;
+			flex-direction: row;
 			justify-content: center;
 			align-items: center;
-			margin-top: 0;
+			border-radius: 25px;
+			margin-top: -20px;
+			margin-left: 30px;
 			font-size: 16px;
 			font-weight: 900;
-			height: 100%;
-			width: 100%;
+			height: 70px;
+			width: 88%;
+			box-shadow: ($texte +110%) 0px 6px 15px;
+			background: $cadre;
 		}
-			.choix:active button
+			.choix:active
 			{
 				background-color: #dfccf5;
 				border-radius: 25px;
 				filter: brightness(1.02);
-				box-shadow: $ombre;
-			}
-			.choix button
-			{
-			display: flex;
-			align-items: center;
-			border-radius: 25px;
-			height: 70px;
-			width: 88%;
-			box-shadow: ($texte +110%) 0px 6px 15px;
-			border: none;
-			margin-left: 30px;
+				box-shadow: grey 0px 6px 10px;
 			}
 			.num
 			{
@@ -157,14 +149,15 @@ main
 				border-radius: 50%;
 				background-color: $primaire;
 				color: white;
+				font-size: 15px;
 				width: 35px;
-				height: 30px;
+				height: 28px;
 				margin-left: -13px;
 			}
 			.choix i
 			{
-				margin-left: 30px;
-				margin-right: -30px;
+				margin-left: 20px;
+				margin-right: 20px;
 				color: $texte +50%;
 				font-size: 20px;
 			}
@@ -258,34 +251,34 @@ main
 				margin-top: -45px;
 				position: absolute;
 			}
-			.coeurvide i
+			.coeurvide
 			{
 				color: $texte;
 			}
-			.coeurrempli i
+			.coeurrempli
 			{
 				color: transparent
 			}
-			.coeurrempli:active i
+			.coeurrempli:active
 			{
 				background: linear-gradient(0deg, $secondaire, $primaire);
-				background-clip: text;
+				-webkit-background-clip: text;
 			}
 
 
 
 /*.....................TABLETTE................*/
-@media screen and (min-width: 768px)
+@media screen and (min-width: 768px) and (max-width: 1293px)
 {
 	.rechercher
 	{
 		padding: 0;
 	}
-	.icone i
+	.rechercher i
 	{
 		font-size: 20px;
-		padding: 0;
-		margin-left: -60px;
+		margin-right: 5px;
+		margin-left: 40px;
 
 	}
 	.ville
@@ -293,7 +286,7 @@ main
 			height: 50px;
 			width: 90%;
 			font-size: 18px;
-			margin-left: -30px;
+			margin-left: -5px;
 	}
 	h1
 	{
@@ -365,9 +358,9 @@ main
 	{
 		margin-left: 90px;
 	}
-	.coeur
+	.coeur i
 	{
-		margin-left: 80%;
+		margin-left: 85%;
 	}
 	
 }
@@ -376,32 +369,24 @@ main
 {
 	.fonctionnement
 	{
-		height: 200px;
+		height: 300px;
 	}
-	.fonctionnement_button
+	.fonctionnement_bouton
 	{
 		flex-direction: row;
-		margin-top: 20px;
-		margin: 0%;
-		padding: 0%;
+		justify-content: space-around;
+		width: 90%;
+		
 	}
-	.num
+	h4
 	{
-		width: 50px;
-	}
-	.choix i
-	{
-		margin-right: 50px;
-	}
-	.choix button
-	{
-		width: 80%;
-		margin: 0%;
-		padding: 0%;
+		margin-top: 10px;
 	}
 	.choix
 	{
-		width: 50%;
+		margin: 0;
+		margin-top: 50px;
+		width: 500px;
 	}
 	#restaurants
 	{
@@ -437,12 +422,12 @@ main
 		margin-left: 30.5%;
 		width: 10%;
 	}
-	.explorer a button:hover
+	.explorer button:hover
 	{
 		box-shadow: $texte 0px 7px 15px;
 		filter: brightness(1.1);
 	}
-	.choix:hover button
+	.choix:hover
 	{
 		background-color: #dfccf5;
 		border-radius: 25px;
