--- a/sass/style-menu.css
+++ b/sass/style-menu.css
@@ -162,7 +162,7 @@ footer {
   height: 50px;
 }
 
-.fleche i {
+.fleche {
   margin-top: 25px;
   margin-left: 20px;
   color: black;
@@ -180,8 +180,6 @@ footer {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -190,21 +188,28 @@ footer {
 .titre h1 {
   font-family: "shrikhand", impact, serif;
   font-size: 25px;
-  margin-left: -30px;
+  margin-left: 30px;
 }
 
 .coeur i {
   font-size: 25px;
-  margin-top: -12px;
+  margin-top: -15px;
+  margin-left: 50px;
   position: absolute;
 }
 
-.coeurvide i {
+.coeurvide {
   color: #727171;
 }
 
-.coeurrempli i {
+.coeurrempli {
   color: transparent;
+}
+
+.coeurrempli:active {
+  background: -webkit-gradient(linear, left bottom, left top, from(#FF79DA), to(#9356DC));
+  background: linear-gradient(0deg, #FF79DA, #9356DC);
+  -webkit-background-clip: text;
 }
 
 .detailmenu {
@@ -240,6 +245,9 @@ h4 {
   width: 100%;
   margin-top: 10px;
   color: black;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .blocmenu {
@@ -337,12 +345,14 @@ h4 {
   color: #727171;
   white-space: nowrap;
   width: 100%;
+  height: 100%;
   overflow: hidden;
   text-overflow: ellipsis;
 }
 
 .tarif {
   font-weight: 800;
+  margin-right: 8px;
   color: black;
 }
 
@@ -351,8 +361,8 @@ h4 {
   display: -ms-flexbox;
   display: flex;
   color: transparent;
-  -webkit-transform: rotate(0turn) translate(0, 0);
-          transform: rotate(0turn) translate(0, 0);
+  -webkit-transform: rotate(0turn);
+          transform: rotate(0turn);
 }
 
 .menu:active {
@@ -362,28 +372,35 @@ h4 {
 
 .menu:active .valide {
   color: white;
+  background-color: #99E2D0;
+  width: 60px;
+  height: 60px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin-top: -32px;
-  margin-left: 20px;
-  height: 61px;
-  padding: 13px;
+  padding: 4px;
+  margin-top: -31.5px;
+  margin-left: 5px;
   border-radius: 0 20px 20px 0;
-  background-color: #99E2D0;
-  -webkit-transition: 2000ms 10s translateX(80px, 0);
-  transition: 2000ms 10s translateX(80px, 0);
+  -webkit-transform: translateX(0, 0);
+          transform: translateX(0, 0);
 }
 
 .menu:active .valide i {
-  font-size: 20px;
+  font-size: 18px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-transform: rotate(1turn);
           transform: rotate(1turn);
-  -webkit-transition: 900ms;
-  transition: 900ms;
+  -webkit-transition: 500ms;
+  transition: 500ms;
 }
 
 .bouton {
@@ -417,7 +434,7 @@ h4 {
           filter: brightness(1.1);
 }
 
-@media screen and (min-width: 768px) and (max-width: 1293px) {
+@media screen and (max-width: 1293px) and (mini-width: 768px) {
   .photo_menu img {
     height: 500px;
   }
@@ -434,9 +451,6 @@ h4 {
             flex-direction: column;
     padding-left: 50px;
     padding-right: 40px;
-  }
-  .coeur {
-    margin-right: 60px;
   }
 }
 
@@ -475,10 +489,9 @@ h4 {
   }
   .coeur i {
     font-size: 30px;
-    margin-top: -35px;
   }
   .menu {
-    height: auto;
+    height: 100px;
     width: 30%;
   }
   .detailmenu h2 {
@@ -536,7 +549,7 @@ h4 {
             justify-content: center;
     margin-top: -46px;
     margin-left: 20px;
-    height: 117px;
+    height: 100px;
     padding: 20px;
     border-radius: 0 20px 20px 0;
     background-color: #99E2D0;
@@ -562,6 +575,11 @@ h4 {
             box-shadow: #727171 0px 7px 15px;
     -webkit-filter: brightness(1.1);
             filter: brightness(1.1);
+  }
+  .coeurrempli:hover {
+    background: -webkit-gradient(linear, left bottom, left top, from(#FF79DA), to(#9356DC));
+    background: linear-gradient(0deg, #FF79DA, #9356DC);
+    -webkit-background-clip: text;
   }
 }
 /*# sourceMappingURL=style-menu.css.map */
