--- a/sass/style.css
+++ b/sass/style.css
@@ -162,7 +162,7 @@ footer {
   height: 50px;
 }
 
-.fleche i {
+.fleche {
   margin-top: 25px;
   margin-left: 20px;
   color: black;
@@ -180,8 +180,6 @@ footer {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -190,21 +188,28 @@ footer {
 .titre h1 {
   font-family: "shrikhand", impact, serif;
   font-size: 25px;
-  margin-left: -30px;
+  margin-left: 30px;
 }
 
 .coeur i {
   font-size: 25px;
-  margin-top: -12px;
+  margin-top: -15px;
+  margin-left: 50px;
   position: absolute;
 }
 
-.coeurvide i {
+.coeurvide {
   color: #727171;
 }
 
-.coeurrempli i {
+.coeurrempli {
   color: transparent;
+}
+
+.coeurrempli:active {
+  background: -webkit-gradient(linear, left bottom, left top, from(#FF79DA), to(#9356DC));
+  background: linear-gradient(0deg, #FF79DA, #9356DC);
+  -webkit-background-clip: text;
 }
 
 .detailmenu {
@@ -240,6 +245,9 @@ h4 {
   width: 100%;
   margin-top: 10px;
   color: black;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .blocmenu {
@@ -337,12 +345,14 @@ h4 {
   color: #727171;
   white-space: nowrap;
   width: 100%;
+  height: 100%;
   overflow: hidden;
   text-overflow: ellipsis;
 }
 
 .tarif {
   font-weight: 800;
+  margin-right: 8px;
   color: black;
 }
 
@@ -351,8 +361,8 @@ h4 {
   display: -ms-flexbox;
   display: flex;
   color: transparent;
-  -webkit-transform: rotate(0turn) translate(0, 0);
-          transform: rotate(0turn) translate(0, 0);
+  -webkit-transform: rotate(0turn);
+          transform: rotate(0turn);
 }
 
 .menu:active {
@@ -362,28 +372,35 @@ h4 {
 
 .menu:active .valide {
   color: white;
+  background-color: #99E2D0;
+  width: 60px;
+  height: 60px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin-top: -32px;
-  margin-left: 20px;
-  height: 61px;
-  padding: 13px;
+  padding: 4px;
+  margin-top: -31.5px;
+  margin-left: 5px;
   border-radius: 0 20px 20px 0;
-  background-color: #99E2D0;
-  -webkit-transition: 2000ms 10s translateX(80px, 0);
-  transition: 2000ms 10s translateX(80px, 0);
+  -webkit-transform: translateX(0, 0);
+          transform: translateX(0, 0);
 }
 
 .menu:active .valide i {
-  font-size: 20px;
+  font-size: 18px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-transform: rotate(1turn);
           transform: rotate(1turn);
-  -webkit-transition: 900ms;
-  transition: 900ms;
+  -webkit-transition: 500ms;
+  transition: 500ms;
 }
 
 .bouton {
@@ -417,7 +434,7 @@ h4 {
           filter: brightness(1.1);
 }
 
-@media screen and (min-width: 768px) and (max-width: 1293px) {
+@media screen and (max-width: 1293px) and (mini-width: 768px) {
   .photo_menu img {
     height: 500px;
   }
@@ -434,9 +451,6 @@ h4 {
             flex-direction: column;
     padding-left: 50px;
     padding-right: 40px;
-  }
-  .coeur {
-    margin-right: 60px;
   }
 }
 
@@ -475,10 +489,9 @@ h4 {
   }
   .coeur i {
     font-size: 30px;
-    margin-top: -35px;
   }
   .menu {
-    height: auto;
+    height: 100px;
     width: 30%;
   }
   .detailmenu h2 {
@@ -536,7 +549,7 @@ h4 {
             justify-content: center;
     margin-top: -46px;
     margin-left: 20px;
-    height: 117px;
+    height: 100px;
     padding: 20px;
     border-radius: 0 20px 20px 0;
     background-color: #99E2D0;
@@ -562,6 +575,11 @@ h4 {
             box-shadow: #727171 0px 7px 15px;
     -webkit-filter: brightness(1.1);
             filter: brightness(1.1);
+  }
+  .coeurrempli:hover {
+    background: -webkit-gradient(linear, left bottom, left top, from(#FF79DA), to(#9356DC));
+    background: linear-gradient(0deg, #FF79DA, #9356DC);
+    -webkit-background-clip: text;
   }
 }
 
@@ -624,13 +642,13 @@ main {
   border-top: solid 4px rgba(221, 217, 217, 0.986);
 }
 
-.icone {
+.rechercher i {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   font-size: 20px;
-  margin-left: 8%;
-  margin-right: 5px;
+  margin-left: 7%;
+  margin-right: 20px;
 }
 
 .ville {
@@ -643,7 +661,8 @@ main {
   width: 80%;
   color: #727171;
   font-size: 16px;
-  background-color: rgba(245, 244, 244, 0.986);
+  border: none;
+  background: none;
 }
 
 .explorer {
@@ -681,13 +700,13 @@ h1 + p {
   border: none;
 }
 
-.explorer a button {
+.explorer a {
   text-decoration: none;
   color: white;
   font-size: 16px;
 }
 
-.explorer a button:active {
+.explorer button:active {
   -webkit-box-shadow: #727171 0px 7px 15px;
           box-shadow: #727171 0px 7px 15px;
   -webkit-filter: brightness(1.1);
@@ -705,13 +724,12 @@ h1 + p {
   height: 370px;
   width: 100%;
   margin-top: 40px;
-  margin-left: -10px;
   margin-bottom: 10px;
   -ms-flex-pack: distribute;
       justify-content: space-around;
 }
 
-.fonctionnement_button {
+.fonctionnement_bouton {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -723,62 +741,51 @@ h1 + p {
       -ms-flex-pack: justify;
           justify-content: space-between;
   width: 100%;
-  height: 300px;
+  height: 250px;
 }
 
 h2 {
   font-weight: 800;
   font-family: "Robotobold", impact, serif;
   font-size: 25px;
-  width: 80%;
+  width: 100%;
   font-size: 25px;
-  margin-left: 30px;
+  margin-left: 25px;
 }
 
 .choix {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
+  -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+      -ms-flex-direction: row;
+          flex-direction: row;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-top: 0;
+  border-radius: 25px;
+  margin-top: -20px;
+  margin-left: 30px;
   font-size: 16px;
   font-weight: 900;
-  height: 100%;
-  width: 100%;
-}
-
-.choix:active button {
-  background-color: #dfccf5;
-  border-radius: 25px;
-  -webkit-filter: brightness(1.02);
-          filter: brightness(1.02);
-  -webkit-box-shadow: #b8b7b7 0px 5px 10px;
-          box-shadow: #b8b7b7 0px 5px 10px;
-}
-
-.choix button {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  border-radius: 25px;
   height: 70px;
   width: 88%;
   -webkit-box-shadow: #e0dfdf 0px 6px 15px;
           box-shadow: #e0dfdf 0px 6px 15px;
-  border: none;
-  margin-left: 30px;
+  background: rgba(245, 244, 244, 0.986);
+}
+
+.choix:active {
+  background-color: #dfccf5;
+  border-radius: 25px;
+  -webkit-filter: brightness(1.02);
+          filter: brightness(1.02);
+  -webkit-box-shadow: grey 0px 6px 10px;
+          box-shadow: grey 0px 6px 10px;
 }
 
 .num {
@@ -794,14 +801,15 @@ h2 {
   border-radius: 50%;
   background-color: #9356DC;
   color: white;
+  font-size: 15px;
   width: 35px;
-  height: 30px;
+  height: 28px;
   margin-left: -13px;
 }
 
 .choix i {
-  margin-left: 30px;
-  margin-right: -30px;
+  margin-left: 20px;
+  margin-right: 20px;
   color: #a4a3a3;
   font-size: 20px;
 }
@@ -927,35 +935,35 @@ aside {
   position: absolute;
 }
 
-.coeurvide i {
+.coeurvide {
   color: #727171;
 }
 
-.coeurrempli i {
+.coeurrempli {
   color: transparent;
 }
 
-.coeurrempli:active i {
+.coeurrempli:active {
   background: -webkit-gradient(linear, left bottom, left top, from(#FF79DA), to(#9356DC));
   background: linear-gradient(0deg, #FF79DA, #9356DC);
-  background-clip: text;
+  -webkit-background-clip: text;
 }
 
 /*.....................TABLETTE................*/
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1293px) {
   .rechercher {
     padding: 0;
   }
-  .icone i {
+  .rechercher i {
     font-size: 20px;
-    padding: 0;
-    margin-left: -60px;
+    margin-right: 5px;
+    margin-left: 40px;
   }
   .ville {
     height: 50px;
     width: 90%;
     font-size: 18px;
-    margin-left: -30px;
+    margin-left: -5px;
   }
   h1 {
     font-size: 25px;
@@ -1018,38 +1026,32 @@ aside {
   .description i {
     margin-left: 90px;
   }
-  .coeur {
-    margin-left: 80%;
+  .coeur i {
+    margin-left: 85%;
   }
 }
 
 /*..................DESKTOP................................*/
 @media screen and (min-width: 1294px) {
   .fonctionnement {
-    height: 200px;
+    height: 300px;
   }
-  .fonctionnement_button {
+  .fonctionnement_bouton {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
-    margin-top: 20px;
-    margin: 0%;
-    padding: 0%;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    width: 90%;
   }
-  .num {
-    width: 50px;
-  }
-  .choix i {
-    margin-right: 50px;
-  }
-  .choix button {
-    width: 80%;
-    margin: 0%;
-    padding: 0%;
+  h4 {
+    margin-top: 10px;
   }
   .choix {
-    width: 50%;
+    margin: 0;
+    margin-top: 50px;
+    width: 500px;
   }
   #restaurants {
     margin: 0%;
@@ -1087,13 +1089,13 @@ aside {
     margin-left: 30.5%;
     width: 10%;
   }
-  .explorer a button:hover {
+  .explorer button:hover {
     -webkit-box-shadow: #727171 0px 7px 15px;
             box-shadow: #727171 0px 7px 15px;
     -webkit-filter: brightness(1.1);
             filter: brightness(1.1);
   }
-  .choix:hover button {
+  .choix:hover {
     background-color: #dfccf5;
     border-radius: 25px;
     -webkit-filter: brightness(1.02);
