souci de background-clip

--- a/sass/layouts/_menu.scss
+++ b/sass/layouts/_menu.scss
@@ -57,7 +57,7 @@
 .coeurrempli:active
 {
     background: linear-gradient(0deg, $secondaire, $primaire);
-    -webkit-background-clip: text;
+    background-clip: text;
 }
 .detailmenu
 {
@@ -358,6 +358,6 @@ h4
     .coeurrempli:hover
     {
         background: linear-gradient(0deg, $secondaire, $primaire);
-        -webkit-background-clip: text;
+        background-clip: text;
     }
 }
