--- a/sass/layouts/_headeretfooter.scss
+++ b/sass/layouts/_headeretfooter.scss
@@ -18,7 +18,7 @@ footer
     width: 100%;
     background-color: darken(grey, $amount: 30);
 }
-.logofooter p
+.logofooter
 {
     font-family: "shrikhand", impact, serif;
     font-size: 18px;
@@ -76,7 +76,7 @@ footer
 		text-align: center;
 		justify-content: space-around;
 		font-size: 16px;
-		width: 100%;
+		width: 95%;
 		flex-direction: row;
 	
 	}
@@ -86,7 +86,7 @@ footer
 		font-size: 18px;
 		margin-right: 20px;
 	}
-	.logofooter p
+	.logofooter
 	{
 		font-size: 25px;
 		text-align: center;
