--- a/sass/layouts/_menu.scss
+++ b/sass/layouts/_menu.scss
@@ -24,7 +24,7 @@
 {
     object-fit: cover;
     width: 100%;
-    height: 50%;
+    height: 225px;
     margin-top: 20px;
 }
 .titre
@@ -52,12 +52,15 @@
 }
 .coeurrempli
 {
-    color: transparent
+	opacity: 0;
 }
 .coeurrempli:active
 {
-    background: linear-gradient(0deg, $secondaire, $primaire);
-    background-clip: text;
+	opacity: 1;
+	background: linear-gradient(0deg, $secondaire, $primaire);
+	background-clip: text;
+	-webkit-background-clip: text;
+	color: transparent;
 }
 .detailmenu
 {
@@ -70,7 +73,6 @@
 }
 .detailmenu h2
 {
-    margin-bottom: 20px;
     font-size: 16px;
     margin-left: 20px;
     border-bottom: solid $tertiaire;
@@ -216,11 +218,11 @@ h4
 	box-shadow: $texte 0px 7px 15px;
 	filter: brightness(1.1);
 }
-@media screen and (max-width: 1293px) and (mini-width: 768px)
+@media screen and (min-width: 768px)and (max-width: 1293px) 
 {
     .photo_menu img
     {
-        height: 500px;
+        height: 270px;
     }
     .fleche
     {
@@ -231,6 +233,7 @@ h4
         display: flex;
         flex-direction: column;
         padding-left: 50px;
+        margin-top: -30px;
         padding-right: 40px;
     }
 }
@@ -256,14 +259,13 @@ h4
     }
     .titre
     {
-        width: 100%;
+        width: 70%;
         justify-content: space-around;
-        margin-top: 30px;
+        margin-top: 20px;
     }
     .titre h1
     {
         font-size: 30px;
-        margin-bottom: 20px;
     }
     .coeur i
     {
@@ -271,7 +273,7 @@ h4
     }
     .menu
     {
-        height: 100px;
+        height: 80px;
         width: 30%;
     }
     .detailmenu h2
@@ -283,7 +285,7 @@ h4
     .detailmenu
     {
         width: 90%;
-        height: 550px;
+        height: 500px;
         justify-content: space-around;
         align-items: center;
     }
@@ -302,7 +304,7 @@ h4
     {
         font-size: 20px;
         margin-left: 20px;
-        margin-top: 20px;
+        margin-top: 10px;
     }
     
     .description_menu
@@ -325,9 +327,9 @@ h4
     color: white;
     align-items: center;
     justify-content: center;
-    margin-top: -46px;
+    margin-top: -36px;
     margin-left: 20px;
-    height: 100px;
+    height: 80px;
     padding: 20px;
     border-radius: 0 20px 20px 0;
     background-color: $tertiaire;
@@ -356,8 +358,11 @@ h4
     }
 
     .coeurrempli:hover
-    {
-        background: linear-gradient(0deg, $secondaire, $primaire);
-        background-clip: text;
-    }
+	{
+		opacity: 1;
+		background: linear-gradient(0deg, $secondaire, $primaire);
+		background-clip: text;
+		-webkit-background-clip: text;
+		color: transparent;
+	}
 }
