--- a/sass/style.css
+++ b/sass/style.css
@@ -48,7 +48,7 @@ footer {
   background-color: #343434;
 }
 
-.logofooter p {
+.logofooter {
   font-family: "shrikhand", impact, serif;
   font-size: 18px;
   color: white;
@@ -113,7 +113,7 @@ footer {
     -ms-flex-pack: distribute;
         justify-content: space-around;
     font-size: 16px;
-    width: 100%;
+    width: 95%;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
@@ -124,7 +124,7 @@ footer {
     font-size: 18px;
     margin-right: 20px;
   }
-  .logofooter p {
+  .logofooter {
     font-size: 25px;
     text-align: center;
     width: 100%;
@@ -172,7 +172,7 @@ footer {
   -o-object-fit: cover;
      object-fit: cover;
   width: 100%;
-  height: 50%;
+  height: 225px;
   margin-top: 20px;
 }
 
@@ -203,13 +203,16 @@ footer {
 }
 
 .coeurrempli {
-  color: transparent;
+  opacity: 0;
 }
 
 .coeurrempli:active {
+  opacity: 1;
   background: -webkit-gradient(linear, left bottom, left top, from(#FF79DA), to(#9356DC));
   background: linear-gradient(0deg, #FF79DA, #9356DC);
   background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
 }
 
 .detailmenu {
@@ -229,7 +232,6 @@ footer {
 }
 
 .detailmenu h2 {
-  margin-bottom: 20px;
   font-size: 16px;
   margin-left: 20px;
   border-bottom: solid #99E2D0;
@@ -434,9 +436,9 @@ h4 {
           filter: brightness(1.1);
 }
 
-@media screen and (max-width: 1293px) and (mini-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1293px) {
   .photo_menu img {
-    height: 500px;
+    height: 270px;
   }
   .fleche {
     margin-left: 50px;
@@ -450,6 +452,7 @@ h4 {
         -ms-flex-direction: column;
             flex-direction: column;
     padding-left: 50px;
+    margin-top: -30px;
     padding-right: 40px;
   }
 }
@@ -478,20 +481,19 @@ h4 {
             align-items: center;
   }
   .titre {
-    width: 100%;
+    width: 70%;
     -ms-flex-pack: distribute;
         justify-content: space-around;
-    margin-top: 30px;
+    margin-top: 20px;
   }
   .titre h1 {
     font-size: 30px;
-    margin-bottom: 20px;
   }
   .coeur i {
     font-size: 30px;
   }
   .menu {
-    height: 100px;
+    height: 80px;
     width: 30%;
   }
   .detailmenu h2 {
@@ -501,7 +503,7 @@ h4 {
   }
   .detailmenu {
     width: 90%;
-    height: 550px;
+    height: 500px;
     -ms-flex-pack: distribute;
         justify-content: space-around;
     -webkit-box-align: center;
@@ -524,7 +526,7 @@ h4 {
   h4 {
     font-size: 20px;
     margin-left: 20px;
-    margin-top: 20px;
+    margin-top: 10px;
   }
   .description_menu {
     font-size: 18px;
@@ -547,9 +549,9 @@ h4 {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    margin-top: -46px;
+    margin-top: -36px;
     margin-left: 20px;
-    height: 100px;
+    height: 80px;
     padding: 20px;
     border-radius: 0 20px 20px 0;
     background-color: #99E2D0;
@@ -577,9 +579,12 @@ h4 {
             filter: brightness(1.1);
   }
   .coeurrempli:hover {
+    opacity: 1;
     background: -webkit-gradient(linear, left bottom, left top, from(#FF79DA), to(#9356DC));
     background: linear-gradient(0deg, #FF79DA, #9356DC);
     background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
   }
 }
 
@@ -997,11 +1002,9 @@ aside {
     width: 100%;
     margin: 0;
   }
-  .choix button {
-    width: 50%;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+  .choix {
+    width: 80%;
+    margin-left: 100px;
   }
   .choix i {
     margin-left: 50px;
@@ -1020,7 +1023,7 @@ aside {
   }
   .carte {
     width: 90%;
-    margin-left: 40px;
+    margin-left: 15px;
     padding: 0;
   }
   aside {
@@ -1036,8 +1039,27 @@ aside {
 
 /*..................DESKTOP................................*/
 @media screen and (min-width: 1294px) {
+  main {
+    width: 100%;
+  }
+  .rechercher i {
+    margin-left: 2%;
+  }
+  .ville {
+    font-size: 18px;
+  }
+  .explorer button {
+    width: 400px;
+  }
+  .explorer a {
+    font-size: 18px;
+  }
   .fonctionnement {
-    height: 300px;
+    height: 200px;
+  }
+  h2 {
+    text-align: center;
+    margin: 0;
   }
   .fonctionnement_bouton {
     -webkit-box-orient: horizontal;
@@ -1046,15 +1068,24 @@ aside {
             flex-direction: row;
     -ms-flex-pack: distribute;
         justify-content: space-around;
-    width: 90%;
+    width: 100%;
+  }
+  .num {
+    margin-left: 0;
+    font-size: 16px;
+    border-radius: 20px 0 0 20px;
+    height: 100%;
+    width: 50px;
   }
   h4 {
     margin-top: 10px;
+    font-size: 18px;
   }
   .choix {
     margin: 0;
     margin-top: 50px;
     width: 500px;
+    height: 50px;
   }
   #restaurants {
     margin: 0%;
@@ -1092,6 +1123,9 @@ aside {
     margin-left: 30.5%;
     width: 10%;
   }
+  .coeur i {
+    margin-left: 37%;
+  }
   .explorer button:hover {
     -webkit-box-shadow: #727171 0px 7px 15px;
             box-shadow: #727171 0px 7px 15px;
@@ -1114,10 +1148,13 @@ aside {
             box-shadow: #b8b7b7 0px 5px 10px;
     border-radius: 20px;
   }
-  .coeurrempli:hover i {
+  .coeurrempli:hover {
+    opacity: 1;
     background: -webkit-gradient(linear, left bottom, left top, from(#FF79DA), to(#9356DC));
     background: linear-gradient(0deg, #FF79DA, #9356DC);
     background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
   }
 }
 
