--- a/sass/style-menu.css
+++ b/sass/style-menu.css
@@ -206,7 +206,7 @@ footer {
   opacity: 0;
 }
 
-.coeurrempli:active {
+.coeurrempli:hover {
   opacity: 1;
   background: -webkit-gradient(linear, left bottom, left top, from(#FF79DA), to(#9356DC));
   background: linear-gradient(0deg, #FF79DA, #9356DC);
@@ -367,12 +367,12 @@ h4 {
           transform: rotate(0turn);
 }
 
-.menu:active {
+.menu:hover {
   -webkit-box-shadow: grey 6px 6px 6px;
           box-shadow: grey 6px 6px 6px;
 }
 
-.menu:active .valide {
+.menu:hover .valide {
   color: white;
   background-color: #99E2D0;
   width: 60px;
@@ -391,7 +391,7 @@ h4 {
           transform: translateX(0, 0);
 }
 
-.menu:active .valide i {
+.menu:hover .valide i {
   font-size: 18px;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -537,54 +537,13 @@ h4 {
     font-size: 20px;
     margin-right: 20px;
   }
-  .menu:hover {
-    -webkit-box-shadow: grey 6px 6px 6px;
-            box-shadow: grey 6px 6px 6px;
-  }
   .menu:hover .valide {
-    color: white;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    margin-top: -363px;
-    margin-left: 20px;
     height: 80px;
-    padding: 20px;
-    border-radius: 0 20px 20px 0;
-    background-color: #99E2D0;
-    -webkit-transition: 2000ms 10s translateX(80px, 0);
-    transition: 2000ms 10s translateX(80px, 0);
-  }
-  .menu:hover .valide i {
-    font-size: 20px;
-    -webkit-transform: rotate(1turn);
-            transform: rotate(1turn);
-    -webkit-transition: 900ms;
-    transition: 900ms;
+    margin-top: -36px;
   }
   .bouton button {
-    width: 400px;
-    margin-top: 30px;
-  }
-  .bouton a button {
-    font-size: 22px;
-  }
-  .bouton a button:hover {
-    -webkit-box-shadow: #727171 0px 7px 15px;
-            box-shadow: #727171 0px 7px 15px;
-    -webkit-filter: brightness(1.1);
-            filter: brightness(1.1);
-  }
-  .coeurrempli:hover {
-    opacity: 1;
-    background: -webkit-gradient(linear, left bottom, left top, from(#FF79DA), to(#9356DC));
-    background: linear-gradient(0deg, #FF79DA, #9356DC);
-    background-clip: text;
-    -webkit-background-clip: text;
-    color: transparent;
+    width: 300px;
+    margin-top: 100px;
   }
 }
 /*# sourceMappingURL=style-menu.css.map */
