--- a/sass/base/_fondations.scss
+++ b/sass/base/_fondations.scss
@@ -18,5 +18,5 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: "Robotoreg", impact, serif;
+    font-family: "Roboto", impact;
 }
