--- a/sass/style.css
+++ b/sass/style.css
@@ -20,7 +20,7 @@
   margin: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  font-family: "Robotoreg", impact, serif;
+  font-family: "Roboto", impact;
 }
 
 .logo {
@@ -927,6 +927,10 @@ aside {
   background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
+}
+
+h3 {
+  font-weight: 900;
 }
 
 /*.....................TABLETTE................*/
