annul  et remplace police shrikhand

--- a/sass/base/_fondations.scss
+++ b/sass/base/_fondations.scss
@@ -8,10 +8,10 @@
     font-family: "Robotobold";
     src: url("fonts/Roboto-Bold-webfont.ttf") format("truetype");
 }
-@font-face {
+@font-face
+{
     font-family: "shrikhand";
-    src: url("fonts/shrikhand-Regular.otf") format("opentype");
-    font-weight: normal;
+    src: url("fonts/shrikhand-regular.otf") format("opentype");
 }
 *
 {
