annul et remplace bis police logo

--- a/sass/layouts/_headeretfooter.scss
+++ b/sass/layouts/_headeretfooter.scss
@@ -20,7 +20,7 @@ footer
 }
 .logofooter
 {
-    font-family: "shrikhand", impact, serif;
+    font-family: 'Shrikhand', impact, serif;
     font-size: 18px;
     color: white;
     width: 35%;
