nouvel essai de regul souci police logo

--- a/sass/layouts/_menu.scss
+++ b/sass/layouts/_menu.scss
@@ -35,7 +35,7 @@
 }
     .titre h1
     {
-        font-family: 'Shrikhand', impact, serif;
+        font-family: "Shrikhand", cursive;
         font-size: 25px;
         margin-left: 30px;
     }
