--- a/sass/style-menu.css
+++ b/sass/style-menu.css
@@ -180,7 +180,7 @@ footer {
 }
 
 .titre h1 {
-  font-family: 'Shrikhand', impact, serif;
+  font-family: "Shrikhand", cursive;
   font-size: 25px;
   margin-left: 30px;
 }
