--- a/sass/style-menu.css
+++ b/sass/style-menu.css
@@ -236,17 +236,6 @@ footer {
   color: #727171;
 }
 
-h4 {
-  font-size: 16px;
-  font-weight: 800;
-  width: 100%;
-  margin-top: 10px;
-  color: black;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
-
 .blocmenu {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -258,6 +247,7 @@ h4 {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  width: 95%;
   height: 250px;
   margin-top: 20px;
 }
@@ -313,18 +303,41 @@ h4 {
   display: flex;
   background-color: white;
   border-radius: 20px;
-  -webkit-box-orient: horizontal;
+  -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  width: 90%;
+  width: 95%;
   height: 60px;
   -ms-flex-pack: distribute;
       justify-content: space-around;
   padding-left: 10px;
   margin-left: 20px;
+}
+
+.totaldescription {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.totaldescription h4 {
+  font-size: 16px;
+  font-weight: 800;
+  width: 100%;
+  margin-top: 10px;
+  color: black;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .descriptiontarif {
@@ -346,8 +359,8 @@ h4 {
 .description_menu {
   color: #727171;
   white-space: nowrap;
-  width: 100%;
   height: 100%;
+  width: 100%;
   overflow: hidden;
   text-overflow: ellipsis;
 }
@@ -355,7 +368,10 @@ h4 {
 .tarif {
   font-weight: 800;
   margin-right: 8px;
+  width: 50px;
   color: black;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 .valide {
@@ -363,8 +379,8 @@ h4 {
   display: -ms-flexbox;
   display: flex;
   color: transparent;
-  -webkit-transform: rotate(0turn);
-          transform: rotate(0turn);
+  -webkit-transform: rotate(0turn) translate(0);
+          transform: rotate(0turn) translate(0);
 }
 
 .menu:hover {
@@ -375,7 +391,7 @@ h4 {
 .menu:hover .valide {
   color: white;
   background-color: #99E2D0;
-  width: 60px;
+  width: 50px;
   height: 60px;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -384,11 +400,11 @@ h4 {
       -ms-flex-pack: center;
           justify-content: center;
   padding: 4px;
-  margin-top: -31.5px;
-  margin-left: 5px;
   border-radius: 0 20px 20px 0;
-  -webkit-transform: translateX(0, 0);
-          transform: translateX(0, 0);
+  -webkit-transform: translate(-50px, 0);
+          transform: translate(-50px, 0);
+  -webkit-transition-duration: 500ms;
+          transition-duration: 500ms;
 }
 
 .menu:hover .valide i {
