--- a/sass/style.css
+++ b/sass/style.css
@@ -236,17 +236,6 @@ footer {
   color: #727171;
 }
 
-h4 {
-  font-size: 16px;
-  font-weight: 800;
-  width: 100%;
-  margin-top: 10px;
-  color: black;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
-
 .blocmenu {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -258,6 +247,7 @@ h4 {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  width: 95%;
   height: 250px;
   margin-top: 20px;
 }
@@ -313,18 +303,41 @@ h4 {
   display: flex;
   background-color: white;
   border-radius: 20px;
-  -webkit-box-orient: horizontal;
+  -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  width: 90%;
+  width: 95%;
   height: 60px;
   -ms-flex-pack: distribute;
       justify-content: space-around;
   padding-left: 10px;
   margin-left: 20px;
+}
+
+.totaldescription {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.totaldescription h4 {
+  font-size: 16px;
+  font-weight: 800;
+  width: 100%;
+  margin-top: 10px;
+  color: black;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .descriptiontarif {
@@ -346,8 +359,8 @@ h4 {
 .description_menu {
   color: #727171;
   white-space: nowrap;
-  width: 100%;
   height: 100%;
+  width: 100%;
   overflow: hidden;
   text-overflow: ellipsis;
 }
@@ -355,7 +368,10 @@ h4 {
 .tarif {
   font-weight: 800;
   margin-right: 8px;
+  width: 50px;
   color: black;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 .valide {
@@ -363,8 +379,8 @@ h4 {
   display: -ms-flexbox;
   display: flex;
   color: transparent;
-  -webkit-transform: rotate(0turn);
-          transform: rotate(0turn);
+  -webkit-transform: rotate(0turn) translate(0);
+          transform: rotate(0turn) translate(0);
 }
 
 .menu:hover {
@@ -375,7 +391,7 @@ h4 {
 .menu:hover .valide {
   color: white;
   background-color: #99E2D0;
-  width: 60px;
+  width: 50px;
   height: 60px;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -384,11 +400,11 @@ h4 {
       -ms-flex-pack: center;
           justify-content: center;
   padding: 4px;
-  margin-top: -31.5px;
-  margin-left: 5px;
   border-radius: 0 20px 20px 0;
-  -webkit-transform: translateX(0, 0);
-          transform: translateX(0, 0);
+  -webkit-transform: translate(-50px, 0);
+          transform: translate(-50px, 0);
+  -webkit-transition-duration: 500ms;
+          transition-duration: 500ms;
 }
 
 .menu:hover .valide i {
@@ -698,6 +714,7 @@ h1 + p {
   margin-bottom: 10px;
   -ms-flex-pack: distribute;
       justify-content: space-around;
+  border: red solid;
 }
 
 .fonctionnement_bouton {
@@ -708,9 +725,8 @@ h1 + p {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   width: 100%;
   height: 250px;
 }
@@ -732,18 +748,18 @@ h2 {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   border-radius: 25px;
   margin-top: -20px;
-  margin-left: 30px;
+  margin-left: 35px;
   font-size: 16px;
   font-weight: 900;
-  height: 70px;
+  height: 60px;
   width: 88%;
   -webkit-box-shadow: #e0dfdf 0px 6px 15px;
           box-shadow: #e0dfdf 0px 6px 15px;
@@ -772,21 +788,20 @@ h2 {
   border-radius: 50%;
   background-color: #9356DC;
   color: white;
-  font-size: 15px;
-  width: 35px;
-  height: 28px;
-  margin-left: -13px;
+  font-size: 12px;
+  width: 25px;
+  height: 25px;
+  margin-left: -15px;
 }
 
 .choix i {
-  margin-left: 20px;
-  margin-right: 20px;
   color: #a4a3a3;
-  font-size: 20px;
+  font-size: 18px;
+  margin-left: 5px;
 }
 
 .choix h4 {
-  margin-bottom: 10px;
+  margin-right: 70px;
 }
 
 .choix:hover i {
